; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/ulp/srp/extr_ib_srp.c_srp_reset_req.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/ulp/srp/extr_ib_srp.c_srp_reset_req.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.srp_target_port = type { i32 }
%struct.srp_request = type { i32 }
%struct.scsi_cmnd = type { i32, i32 (%struct.scsi_cmnd*)* }

@DID_RESET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.srp_target_port*, %struct.srp_request*)* @srp_reset_req to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @srp_reset_req(%struct.srp_target_port* %0, %struct.srp_request* %1) #0 {
  %3 = alloca %struct.srp_target_port*, align 8
  %4 = alloca %struct.srp_request*, align 8
  %5 = alloca %struct.scsi_cmnd*, align 8
  store %struct.srp_target_port* %0, %struct.srp_target_port** %3, align 8
  store %struct.srp_request* %1, %struct.srp_request** %4, align 8
  %6 = load %struct.srp_target_port*, %struct.srp_target_port** %3, align 8
  %7 = load %struct.srp_request*, %struct.srp_request** %4, align 8
  %8 = call %struct.scsi_cmnd* @srp_claim_req(%struct.srp_target_port* %6, %struct.srp_request* %7, i32* null)
  store %struct.scsi_cmnd* %8, %struct.scsi_cmnd** %5, align 8
  %9 = load %struct.scsi_cmnd*, %struct.scsi_cmnd** %5, align 8
  %10 = icmp ne %struct.scsi_cmnd* %9, null
  br i1 %10, label %11, label %25

11:                                               ; preds = %2
  %12 = load %struct.srp_target_port*, %struct.srp_target_port** %3, align 8
  %13 = load %struct.srp_request*, %struct.srp_request** %4, align 8
  %14 = load %struct.scsi_cmnd*, %struct.scsi_cmnd** %5, align 8
  %15 = call i32 @srp_free_req(%struct.srp_target_port* %12, %struct.srp_request* %13, %struct.scsi_cmnd* %14, i32 0)
  %16 = load i32, i32* @DID_RESET, align 4
  %17 = shl i32 %16, 16
  %18 = load %struct.scsi_cmnd*, %struct.scsi_cmnd** %5, align 8
  %19 = getelementptr inbounds %struct.scsi_cmnd, %struct.scsi_cmnd* %18, i32 0, i32 0
  store i32 %17, i32* %19, align 8
  %20 = load %struct.scsi_cmnd*, %struct.scsi_cmnd** %5, align 8
  %21 = getelementptr inbounds %struct.scsi_cmnd, %struct.scsi_cmnd* %20, i32 0, i32 1
  %22 = load i32 (%struct.scsi_cmnd*)*, i32 (%struct.scsi_cmnd*)** %21, align 8
  %23 = load %struct.scsi_cmnd*, %struct.scsi_cmnd** %5, align 8
  %24 = call i32 %22(%struct.scsi_cmnd* %23)
  br label %25

25:                                               ; preds = %11, %2
  ret void
}

declare dso_local %struct.scsi_cmnd* @srp_claim_req(%struct.srp_target_port*, %struct.srp_request*, i32*) #1

declare dso_local i32 @srp_free_req(%struct.srp_target_port*, %struct.srp_request*, %struct.scsi_cmnd*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
